adjust nav spacing and fix box padding when expanded to links are accessible.

--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -143,13 +143,14 @@
       @include breakpoint($bp--large) {
         border-bottom: 6px solid transparent;
         font-size: 14px;
-        line-height: 40px;
+        line-height: 20px;
         padding-bottom: 2px;
       }
       @include breakpoint($bp--xlarge) {
         font-size: 16px;
-        line-height: 33px;
-        padding-top: 20px;
+        //line-height: 33px;
+        //padding-top: 20px;
+        padding-top: 13px;
       }
     }
   }
